# cmake_

ch_01/recipe_03/: CMakeCache.txt  CMakeLists.txt  Makefile  Message.cpp  cmake_install.cmake  hello-world
ch_01/single_executable/: CMakeLists.txt  main_hello.cpp
ch_03/recipe_01/: CMakeLists.txt
ch_03/recipe_02/: CmakeLists.txt  hello_embedded_python.c
ch_03/recipe_08_boost/: CMakeLists.txt
ch_04/ch_4_tests/: CMakeCache.txt  CmakeLists.txt  Makefile  cmake_install.cmake  hello_world  sum_integers.cpp  sum_integers.hpp  the_main.cpp  the_test.cpp
ch_04/gunit_ex/: CMakeLists.txt  the_test.cpp
ch_04/message/: CMakeLists.txt  the_main.cpp
ch_14_data_races/recipe_01/: CMakeLists.txt  dashboard.cmake  the_main.cpp
ch_14_data_races/recipe_02_code_coverage/: CMakeLists.txt  CTestConfig.cmake
ch_14_data_races/recipe_02_code_coverage/Testing/: TAG
ch_14_data_races/recipe_02_code_coverage/Testing/Temporary/: LastCoverage_20250530-1519.log.tmp
ch_14_data_races/recipe_02_code_coverage/src/: CMakeLists.txt  sum_integers.cpp
ch_14_data_races/recipe_02_code_coverage/tests/: CmakeLists.txt
ch_14_data_races/recipe_03_address_santizer/: CMakeLists.txt  CTestConfig.cmake  dashboard.cmake
ch_14_data_races/recipe_03_address_santizer/src/: CMakeLists.txt  buggy.cpp  buggy.hpp
ch_14_data_races/recipe_03_address_santizer/tests/: CMakeLists.txt  leaky.cpp  use_after_free.cpp
ch_14_data_races/testing_dashboard/: CMakeLists.txt  CTestConfig.cmake
ch_14_data_races/testing_dashboard/src/: CMakeLists.txt
ch_14_data_races/testing_dashboard/tests/: CmakeLists.txt  test_long.cpp  test_short.cpp
